improved login layout

--- a/interface/login_demo.html
+++ b/interface/login_demo.html
@@ -8,12 +8,16 @@
     <source>
 </head>
 <body>
-    <h1>Table CTRL</h1>
-    <div class="grid login">
-        <h1>Login Screen</h1>
-        <input name="username" class="textInput" placeholder="Username">
-        <input name="password" class="textInput" placeholder="Password">
-        <submit>Login</submit>
+    <div class="topbar">
+        <h1>Table CTRL</h1>
     </div>
+    <main>
+        <div class="loginDiv">
+            <h1>Login Screen</h1>
+            <input name="username" class="textInput" placeholder="Username">
+            <input name="password" class="textInput" placeholder="Password">
+            <button>Login</button>
+        </div>
+    </main>
 </body>
 </html>
